feat: add JavaCallable/JavaInvokable public interfaces for external Java code
- Add JavaCallable (public) extending JsCallable for external Java callables
- Add JavaInvokable (public) for convenience interface ignoring context
- ES6 constructor compliance: Date() returns string, new Date() returns object
- Fix JsArray.call() to return JsArray instead of plain List
- Fix Terms.instanceOf() to handle built-in types by class comparison
- Update boundary conversion to exclude JsFunction from undefined→null
- Add 38 ES6 constructor compliance tests for Date/Array/Object/String/etc
- Update JS_ENGINE.md documentation with new interface hierarchy

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>